<resources>
    <string name="app_name">RKGlassDemoKotlin</string>
    <string name="please_connect_devices">Please connect your devices</string>
    <string name="hardware_text">Hardware</string>
    <string name="camera">Camera</string>
    <string name="offline_voice">Offline Voice Recognize</string>
    <string name="presentation">Presentation</string>
    <string name="quite">Double Click to Exit</string>
    <string name="selector">Selector</string>
    <string name="hardware_information">Hardware Information</string>
    <string name="hardware_information_content">hardware information content</string>
    <string name="show_glass_information">Show Glass Information</string>
    <string name="hide_glass_information">Hid Glass Information</string>
    <string name="display_mode">Display Mode：</string>
    <string name="get_sensor_values">Get Sensor values</string>
    <string name="stop_get_sensor_values">Stop Get Sensor values</string>
    <string name="test_mic_usage">Test Mic usage</string>
    <string name="record_audio">Record audio</string>
    <string name="start_record">start record</string>
    <string name="play_last_record">play last record</string>
    <string name="stop_record">Stop Record</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="request_camera_permission">Request Camera permission</string>
    <string name="is_air_pro_plus">Need test with Air Pro +, or want to refresh the connection.</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="start_preview">start preview</string>
    <string name="stop_preview">stop preview</string>
    <string name="definition">Definition</string>
    <string name="ensure">Ensure</string>
    <string name="close">Close</string>
    <string name="ae_mode">AE</string>
    <string name="zoom">Zoom:</string>
    <string name="select_language">Language</string>
    <string name="ch">Chinese</string>
    <string name="en">English</string>
    <string name="input_3_6">请输入3到6个纯中文字符</string>
    <string name="input_english_word_only">Input English words only</string>
    <string name="add">Add</string>
    <string name="add_offline_cmd">Add Offline cmd</string>
    <string name="cmd">CMD：</string>
    <string name="pinyin">拼音：</string>
    <string name="add_notice_zh">中文离线指令请输入纯中文，暂不支持中英文混合。</string>
    <string name="add_notice_en">Add commends in EN mode, shell with all words by English, mixed languages is not supported yet.</string>
    <string name="cancel">Cancel</string>
    <string name="open_presentation">open presentation</string>
    <string name="dismiss_presentation">dismiss presentation</string>
    <string name="please_check_permission">Please Allow these permissions.</string>
</resources>