<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.rokid.rkglassdemokotlin.selector.SelectorModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".selector.SelectorActivity">

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/top"
            android:background="@color/color_primary"
            app:setViewHeight="@{data.topHeight}"
            android:layout_width="0dp"
            android:layout_height="21dp"/>

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top"
            android:id="@+id/action_view"
            android:background="@color/color_primary"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"/>

        <androidx.appcompat.widget.AppCompatImageView
            app:layout_constraintTop_toTopOf="@id/action_view"
            app:layout_constraintBottom_toBottomOf="@id/action_view"
            app:layout_constraintStart_toStartOf="@id/action_view"
            android:padding="@dimen/spacing_normal"
            app:layout_constraintDimensionRatio="1:1"
            android:id="@+id/back"
            android:onClick="@{(v)->data.onBack(v)}"
            app:srcCompat="@drawable/back"
            android:tint="@color/white"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <com.google.android.material.textview.MaterialTextView
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="@id/action_view"
            app:layout_constraintBottom_toBottomOf="@id/action_view"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/white"
            android:text="@string/selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_to_hardware"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/action_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:text="@string/hardware_text"
            android:onClick="@{(v)->data.onHardwareTest(v)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_to_camera"
            app:layout_constraintTop_toBottomOf="@id/btn_to_hardware"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            app:showView="@{data.showCamera}"
            android:onClick="@{(v)->data.onCameraDemo(v)}"
            android:text="@string/camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:id="@+id/btn_to_voice"
            app:layout_constraintTop_toBottomOf="@id/btn_to_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:onClick="@{(v)->data.onVoiceDemo(v)}"
            android:text="@string/offline_voice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:id="@+id/btn_to_presentation"
            app:layout_constraintTop_toBottomOf="@id/btn_to_voice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:onClick="@{(v)->data.onPresentation(v)}"
            android:text="@string/presentation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>