<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.rokid.rkglassdemokotlin.voice.VoiceModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".voice.VoiceActivity">

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/color_primary"
            android:id="@+id/top"
            app:setViewHeight="@{data.topHeight}"
            android:layout_width="0dp"
            android:layout_height="24dp"/>

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top"
            android:background="@color/color_primary"
            android:id="@+id/action_view"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"/>

        <androidx.appcompat.widget.AppCompatImageView
            app:layout_constraintTop_toTopOf="@id/action_view"
            app:layout_constraintBottom_toBottomOf="@id/action_view"
            app:layout_constraintStart_toStartOf="@id/action_view"
            app:layout_constraintDimensionRatio="1:1"
            android:padding="@dimen/spacing_normal"
            android:onClick="@{(v)->data.onBackPressed(v)}"
            app:srcCompat="@drawable/back"
            app:tint="@color/white"
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <com.google.android.material.textview.MaterialTextView
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="@id/action_view"
            app:layout_constraintBottom_toBottomOf="@id/action_view"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/white"
            android:text="@string/offline_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/select_language"
            app:layout_constraintTop_toTopOf="@id/rg_select_language"
            app:layout_constraintBottom_toBottomOf="@id/rg_select_language"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/spacing_half"
            android:layout_marginStart="@dimen/spacing_half"
            android:id="@+id/txv_select_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/rg_select_language"
            app:layout_constraintStart_toEndOf="@id/txv_select_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_view"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:text="@string/ch"
                android:checked="@={data.isCH}"
                android:paddingHorizontal="@dimen/spacing_half"
                android:layout_marginHorizontal="@dimen/spacing_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:text="@string/en"
                android:checked="@={data.isEN}"
                android:paddingHorizontal="@dimen/spacing_half"
                android:layout_marginHorizontal="@dimen/spacing_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txv_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_half"
            app:layout_constraintTop_toBottomOf="@id/rg_select_language"
            android:padding="@dimen/spacing_half"
            android:text="已添加指令"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_added"
            app:layout_constraintTop_toBottomOf="@id/txv_added"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>